tests/ok/for-range-alias-pattern.ari
fn main() -> i64 {
  var total = 0;

  for item @ value in range(1, 4) {
    total = total + item + value;
  }

  for keep @ _ in 0..3 {
    total = total + keep;
  }

  let inclusive = range_inclusive(2, 3);
  for square @ factor in inclusive {
    total = total + square * factor;
  }

  return total;
}
