tests/errors/attribute-no-mangle-argument.ari
@no_mangle("value")
fn value() -> i64 {
  return 1;
}
